# CMakeStarter

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
test/: CMakeLists.txt  basic_test.cpp
